2003-12-27  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/remoteControlBrackets.jsp: Don't show final scores
	in playoffs (847952).

2003-12-18  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/ImportDB.java: Added check for differences before
	importing team data.

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Added tournament name to the final scores report.

2003-12-17  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/advanceTeams.jsp: Added page to do batch advancement
	of teams (853008).

2003-12-14  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/commitTeam.jsp: Ensure that scores don't get deleted
	when team data is edited (859692).

2003-12-07  Jon Schewe  <jpschewe@mtu.net>
	
	* Release version 2.2.

	* src/fll/Queries.java: Updated some documentation as well as
	minimum score values (subjective was using performance).

2003-12-06  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/index.jsp: Removed old links to brackets, only use
	the remote control and admin ones now.

	* src/fll/web/report/CategoryScores.java (generateCategoryTable):
	Added quotes around division to handle when it's a string.  This
	was a problem at the Crosswinds tournament today where the
	divisions were 2E and 2W. 

2003-11-30  Jon Schewe  <jpschewe@mtu.net>

	* Release version 2.2.
	
2003-11-29  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/index.jsp: Updated to handle the situation where
	this page is visited and no teams are in the database.

2003-11-22  Jon Schewe  <jpschewe@mtu.net>

	* web/display.jsp: Fixed big screen display to only refresh the
	window when what is to be shown has changed.  

	* web/scoreboard/allteams.jsp: Add some padding at the end of the
	scrolling of all teams to ensure that the teams can see the last
	team when running in 800x600 mode.

	* web/display.jsp: Ensure that welcome page doesn't come up everytime.

	* web/instructions.jsp: Tiebreaker info is automatically pulled
	out of the current document.
